2020-07-26 VicSanRoPe <?>

	* Spanish translation

2020-07-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Load custom exchange rates from LOCAL_DATA_DIR/custom_exchange_rates, with one "x ABC = y DEF" (e.g. "1USD=70.86RUB") on each row

2020-07-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Extend man page with commands, settings, syntax, and examples sections

2020-07-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support use of right arrow (including "->") as alternative to "to" for conversion (e.g. 5m->ft)

2020-07-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Only apply PrintOptions::negative_exponents to units
	* Always use negative exponents instead of division when all units have negative exponents
	* Use middle dot instead of multiplication x in unit expressions
	* Case insensitive sorting of units, variables and functions
	* Add more references in qalc to the GUI manual

2020-06-30 Hanna Knutsson <hanna.knutsson@protonmail.com>
	
	* Normalize numbers with fractional exponents, e.g. sqrt(a)^-b=sqrt(a)^b/a, a^(-2/3)=a^(1/3)/a, a^(2/3)=a^(-1/3)*a, and simplify roots with rational multipliers after evaluation
	* Improvements for mixed fractions
	* Avoid excessive parentheses with negated powers

2020-06-23 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix plus-minus sign in misplaced character/operators error messages

2020-06-08 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix placement (last) of constant of definite integral
	* sin(x*pi) and tan(x*pi) equals zero if x represents an integer

2020-06-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segfault when parsing an expression that contains a prefix with more than one letter and a unit exponent (2 or 3) without exponentiation operator, e.g. dam3

2020-06-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix use of equals sign in qalc command line arguments (e.g. "qalc --base=16")

2020-05-30 Hanna Knutsson <hanna.knutsson@protonmail.com>
