@@ -1,3 +1,7 @@
+2020-07-28 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Add Euler's totient function
+
 2020-07-26 VicSanRoPe <?>
 
 	* Spanish translation
